Now sends a phrase every minute

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "tsc && node dist/Main.js"
+    "start": "tsc && node dist/Main.js",
+    "logs": "heroku logs -a a-little-louder-please"
   },
   "repository": {
     "type": "git",
