--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/aindeev/typescript-node-starter#readme",
   "dependencies": {
+    "express": "^4.17.1",
     "node-schedule": "^1.3.2",
     "twilio": "^3.44.0",
     "typescript": "^3.8.3"
