--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "tsc && node dist/Main.js",
-    "logs": "heroku logs -a a-little-louder-please"
+    "logs": "heroku logs -a a-little-louder-please --tail"
   },
   "repository": {
     "type": "git",
