--- a/package.json
+++ b/package.json
@@ -19,8 +19,14 @@
   },
   "homepage": "https://github.com/aindeev/typescript-node-starter#readme",
   "dependencies": {
+    "@types/node": "^14.0.14",
+    "@types/validator": "^13.1.0",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "node-schedule": "^1.3.2",
+    "pg": "^8.2.1",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^6.1.0",
     "twilio": "^3.44.0",
     "typescript": "^3.8.3"
   }
