--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/validator": "^13.1.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "libphonenumber-js": "^1.7.53",
     "node-schedule": "^1.3.2",
     "pg": "^8.2.1",
     "pg-hstore": "^2.3.3",
