--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "tsc && node dist/Main.js",
-    "logs": "heroku logs -a a-little-louder-please --tail"
+    "logs": "heroku logs -a a-little-louder-please --tail",
+    "jest": "jest"
   },
   "repository": {
     "type": "git",
@@ -20,6 +21,7 @@
   "homepage": "https://github.com/aindeev/typescript-node-starter#readme",
   "dependencies": {
     "@types/node": "^14.0.14",
+    "@types/supertest": "^2.0.10",
     "@types/validator": "^13.1.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
@@ -28,7 +30,13 @@
     "pg": "^8.2.1",
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.1.0",
+    "supertest": "^4.0.2",
     "twilio": "^3.44.0",
     "typescript": "^3.8.3"
+  },
+  "devDependencies": {
+    "@types/jest": "^26.0.3",
+    "jest": "^26.1.0",
+    "ts-jest": "^26.1.1"
   }
 }
