--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "tsc && node dist/Main.js",
+    "start": "tsc && node -r dotenv/config dist/Main.js",
     "logs": "heroku logs -a a-little-louder-please --tail",
     "jest": "jest"
   },
@@ -24,6 +24,7 @@
     "@types/supertest": "^2.0.10",
     "@types/validator": "^13.1.0",
     "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "libphonenumber-js": "^1.7.53",
     "node-schedule": "^1.3.2",
