--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
   },
   "homepage": "https://github.com/aindeev/typescript-node-starter#readme",
   "dependencies": {
+    "@types/jest": "^26.0.3",
     "@types/node": "^14.0.14",
+    "@types/node-schedule": "^1.3.0",
     "@types/supertest": "^2.0.10",
     "@types/validator": "^13.1.0",
-    "@types/jest": "^26.0.3",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
